--- a/dnde_encaja_lo_que_hemos_aprendido.html
+++ b/dnde_encaja_lo_que_hemos_aprendido.html
@@ -60,8 +60,8 @@
 <p>Ahora... <strong>¡¡Haz tu propio resumen del contenido teórico!!</strong></p>
 <p>Si lo necesitas, puedes apoyarte en las siguientes plantillas para realizar resumen guiado del contenido teórico que hemos tratado:</p>
 </div>
-<ul class='exeFileList'><li><a href='Resumen guiado de la busquda de empleo.pdf' target='_blank'>Plantilla de resumen guiado de búsqueda de empleo - imprimible<span> (Ventana nueva)</span></a></li>
-<li><a href='Resumen guiado de la busquda de empleo.docx' target='_blank'>Plantilla de resumen guiado de búsqueda de empleo - editable<span> (Ventana nueva)</span></a></li>
+<ul class='exeFileList'><li><a href='Resumen guiado de la busqueda de empleo.pdf' target='_blank'>Plantilla de resumen guiado de búsqueda de empleo - imprimible<span> (Ventana nueva)</span></a></li>
+<li><a href='Resumen guiado de la busqueda de empleo.docx' target='_blank'>Plantilla de resumen guiado de búsqueda de empleo - editable<span> (Ventana nueva)</span></a></li>
 </ul></div>
 </div>
 </div>
